split image string in repo and tag
