# handler/http_hdl/swagger_docs/restricted_swagger.json
@@ -547,6 +547,17 @@
         }
     },
     "definitions": {
+        "github_com_SENERGY-Platform_mgw-core-manager_lib_model.Image": {
+            "type": "object",
+            "properties": {
+                "repository": {
+                    "type": "string"
+                },
+                "tag": {
+                    "type": "string"
+                }
+            }
+        },
         "lib.Job": {
             "type": "object",
             "properties": {
@@ -626,7 +637,7 @@
                     "$ref": "#/definitions/model.SrvContainer"
                 },
                 "image": {
-                    "type": "string"
+                    "$ref": "#/definitions/github_com_SENERGY-Platform_mgw-core-manager_lib_model.Image"
                 },
                 "name": {
                     "type": "string"
@@ -766,16 +777,40 @@
         "time.Duration": {
             "type": "integer",
             "enum": [
+                -9223372036854775808,
+                9223372036854775807,
                 1,
                 1000,
                 1000000,
-                1000000000
+                1000000000,
+                60000000000,
+                3600000000000,
+                -9223372036854775808,
+                9223372036854775807,
+                1,
+                1000,
+                1000000,
+                1000000000,
+                60000000000,
+                3600000000000
             ],
             "x-enum-varnames": [
+                "minDuration",
+                "maxDuration",
                 "Nanosecond",
                 "Microsecond",
                 "Millisecond",
-                "Second"
+                "Second",
+                "Minute",
+                "Hour",
+                "minDuration",
+                "maxDuration",
+                "Nanosecond",
+                "Microsecond",
+                "Millisecond",
+                "Second",
+                "Minute",
+                "Hour"
             ]
         }
     }
